--- a/package.json
+++ b/package.json
@@ -10,17 +10,23 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^12.0.0",
     "@react-navigation/drawer": "^6.4.2",
+    "@react-navigation/native": "*",
     "@react-navigation/native-stack": "^6.7.0",
     "axios": "^0.27.2",
     "expo": "~45.0.0",
+    "expo-constants": "~13.0.2",
     "expo-status-bar": "~1.3.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-ionicons": "^4.6.5",
+    "react-native-paper": "4.9.2",
     "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-vector-icons": "^9.2.0",
     "react-native-web": "0.17.7"
   },
